<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidUDPActivity!</string>
    <string name="app_name">Android UDP</string>
    <string name="sendLabel">Send Packet</string>
    <string name="ip_address_or_hostname">IP address or hostname</string>
    <string name="port_number">Port number</string>
    <string name="action_settings">Settings</string>

    <string name="slogan">In Search of Incredible</string>
    <string name="title">UDP FILE Transmitter</string>
    <string name="author">johnchain_li@asus.com</string>
    <string name="hostname">hostname:</string>
    <string name="port">port:</string>
    <string name="filename">filename:</string>
    <string name="quit">quit</string>
    <string name="pause">pause</string>
    <string name="start">start</string>
    <string name="mysql4">mysql</string>
    <string name="Progress">Progress</string>
    <string name="never">never</string>
</resources>
