<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp">
        <TextView
            android:text="@string/hostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address_or_hostname" >
            <requestFocus />
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp">

        <TextView
            android:text="@string/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/port_number"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="10sp">

        <TextView
            android:text="@string/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mysql4"
            android:hint="@string/port_number" />
    </LinearLayout>

    <TextView
        android:paddingBottom="10sp"
        android:id="@+id/output1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/darker_gray"
        android:typeface="monospace"
        android:padding="10sp"
        android:text="@string/hello" />
    <TextView
        android:paddingBottom="10sp"
        android:id="@+id/output2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/darker_gray"
        android:typeface="monospace"
        android:padding="10sp"
        android:text="@string/hello" />

    <TextView
        android:text="@string/Progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10sp"/>
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:padding="10sp"
        style="@android:style/Widget.ProgressBar.Horizontal" />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20sp"
            android:text="@string/quit" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20sp"
            android:text="@string/start" />

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20sp"
            android:text="@string/pause" />
    </LinearLayout>

    <TextView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/asus_32px"
        android:text="@string/slogan" />

</LinearLayout>